@@ -15,6 +15,7 @@ glib/gutf8.c
 glib/goption.c
 glib/gkeyfile.c
 gio/gappinfo.c
+gio/gasynchelper.c
 gio/gasyncresult.c
 gio/gbufferedinputstream.c
 gio/gbufferedoutputstream.c
@@ -25,8 +26,11 @@ gio/gdataoutputstream.c
 gio/gdesktopappinfo.c
 gio/gdirectorymonitor.c
 gio/gdrive.c
+gio/gdummyfile.c
+gio/gfileattribute.c
 gio/gfile.c
 gio/gfileenumerator.c
+gio/gfileicon.c
 gio/gfileinfo.c
 gio/gfileinputstream.c
 gio/gfilemonitor.c
@@ -36,56 +40,36 @@ gio/gfilterinputstream.c
 gio/gfilteroutputstream.c
 gio/gicon.c
 gio/ginputstream.c
+gio/gioerror.c
+gio/giomodule.c
+gio/gioscheduler.c
 gio/gloadableicon.c
+gio/glocaldirectorymonitor.c
 gio/glocalfile.c
+gio/glocalfileenumerator.c
 gio/glocalfileinfo.c
 gio/glocalfileinputstream.c
+gio/glocalfilemonitor.c
 gio/glocalfileoutputstream.c
+gio/glocalvfs.c
+gio/gmemoryinputstream.c
 gio/gmemoryoutputstream.c
+gio/gmount.c
 gio/gmountoperation.c
+gio/gnativevolumemonitor.c
 gio/goutputstream.c
+gio/gpollfilemonitor.c
 gio/gseekable.c
 gio/gsimpleasyncresult.c
-gio/gunixdrive.c
-gio/gunixvolume.c
-gio/gvolume.c
-gio/gvolumemonitor.c
-gio/gwin32appinfo.c
-gio/gappinfo.c
-gio/gasyncresult.c
-gio/gbufferedinputstream.c
-gio/gbufferedoutputstream.c
-gio/gcancellable.c
-gio/gcontenttype.c
-gio/gdatainputstream.c
-gio/gdesktopappinfo.c
-gio/gdirectorymonitor.c
-gio/gdrive.c
-gio/gfile.c
-gio/gfileenumerator.c
-gio/gfileinfo.c
-gio/gfileinputstream.c
-gio/gfilemonitor.c
-gio/gfilenamecompleter.c
-gio/gfileoutputstream.c
-gio/gfilterinputstream.c
-gio/gfilteroutputstream.c
-gio/gicon.c
-gio/ginputstream.c
-gio/gloadableicon.c
-gio/glocalfile.c
-gio/glocalfileinfo.c
-gio/glocalfileinputstream.c
-gio/glocalfileoutputstream.c
-gio/gmemoryoutputstream.c
-gio/gmountoperation.c
-gio/goutputstream.c
-gio/gseekable.c
-gio/gsimpleasyncresult.c
-gio/gunixdrive.c
+gio/gthemedicon.c
+gio/gunionvolumemonitor.c
 gio/gunixinputstream.c
+gio/gunixmount.c
+gio/gunixmounts.c
 gio/gunixoutputstream.c
 gio/gunixvolume.c
+gio/gunixvolumemonitor.c
+gio/gvfs.c
 gio/gvolume.c
 gio/gvolumemonitor.c
 gio/gwin32appinfo.c
